--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -6,13 +6,39 @@
       <div class="col-lg-4 mx-auto">
         <h2 class="text-center mb-4">Registro</h2>
         <div class="auto-form-wrapper">
-          <form action="#">
+          <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
               <div class="input-group">
-                <input type="email" class="form-control" placeholder="Correo" />
+                <input
+                  type="text"
+                  class="form-control"
+                  formControlName="nombre"
+                  placeholder="Nombre"
+                />
                 <div class="input-group-append">
                   <span class="input-group-text">
-                    <i class="fa fa-check-circle"></i>
+                    <i
+                      *ngIf="registerForm.controls.nombre.valid"
+                      class="fa fa-check-circle"
+                    ></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group">
+                <input
+                  type="email"
+                  class="form-control"
+                  formControlName="correo"
+                  placeholder="Correo"
+                />
+                <div class="input-group-append">
+                  <span class="input-group-text">
+                    <i
+                      *ngIf="registerForm.controls.correo.valid"
+                      class="fa fa-check-circle"
+                    ></i>
                   </span>
                 </div>
               </div>
@@ -22,18 +48,25 @@
                 <input
                   type="password"
                   class="form-control"
+                  formControlName="password"
                   placeholder="Password"
                 />
                 <div class="input-group-append">
                   <span class="input-group-text">
-                    <i class="fa fa-check-circle"></i>
+                    <i
+                      *ngIf="registerForm.controls.password.valid"
+                      class="fa fa-check-circle"
+                    ></i>
                   </span>
                 </div>
               </div>
             </div>
 
             <div class="form-group">
-              <button class="btn btn-primary submit-btn btn-block">
+              <button
+                class="btn btn-primary submit-btn btn-block"
+                [disabled]="registerForm.invalid"
+              >
                 Crear cuenta
               </button>
             </div>
