--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -41,10 +41,21 @@
             </div>
             <div class="form-group">
               <button
+                *ngIf="!loading"
+                type="submit"
                 class="btn btn-primary submit-btn btn-block"
                 [disabled]="this.loginForm.invalid"
               >
                 Login
+              </button>
+              <button
+                *ngIf="loading"
+                type="button"
+                class="btn btn-primary submit-btn btn-block"
+                [disabled]="true"
+              >
+                <i class="fa fa-spin fa-sync"></i>
+                Espere...
               </button>
             </div>
 
