--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -64,10 +64,21 @@
 
             <div class="form-group">
               <button
+                *ngIf="!loading"
+                type="submit"
                 class="btn btn-primary submit-btn btn-block"
                 [disabled]="registerForm.invalid"
               >
                 Crear cuenta
+              </button>
+              <button
+                *ngIf="loading"
+                type="button"
+                class="btn btn-primary submit-btn btn-block"
+                [disabled]="true"
+              >
+                <i class="fa fa-spin fa-sync"></i>
+                Espere...
               </button>
             </div>
             <div class="text-block text-center my-3">
