--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="page-body-wrapper">
   <app-sidebar></app-sidebar>
-  <div class="main-panel">
+  <div *ngIf="ingresoEgresoData | async" class="main-panel">
     <div class="content-wrapper">
       <router-outlet></router-outlet>
     </div>
