--- a/src/app/ingreso-egreso/detalle/detalle.component.html
+++ b/src/app/ingreso-egreso/detalle/detalle.component.html
@@ -15,11 +15,23 @@
           </thead>
 
           <tbody>
-            <tr>
-              <td>Descripción</td>
-              <td>Monto</td>
-              <td>Tipo</td>
-              <td>acciones</td>
+            <tr *ngFor="let item of ingresosEgresos | async">
+              <td>{{ item.descripcion }}</td>
+              <td>{{ item.monto | currency: "EUR" }}</td>
+              <td
+                [class.text-success]="item.tipo === 'ingreso'"
+                [class.text-danger]="item.tipo === 'egreso'"
+              >
+                {{ item.tipo | titlecase }}
+              </td>
+              <td>
+                <button
+                  (click)="borrar(item.uid)"
+                  class="btn btn-danger btn-sm mt-0"
+                >
+                  <i class="fa fa-trash"></i>Borrar
+                </button>
+              </td>
             </tr>
           </tbody>
         </table>
