--- a/src/app/ingreso-egreso/estadistica/estadistica.component.html
+++ b/src/app/ingreso-egreso/estadistica/estadistica.component.html
@@ -9,13 +9,15 @@
           <div class="float-right">
             <p class="mb-0 text-right">Ingresos</p>
             <div class="fluid-container">
-              <h3 class="font-weight-medium text-right mb-0">$65,650</h3>
+              <h3 class="font-weight-medium text-right mb-0">
+                {{ totalIngresos | currency: "EUR" }}
+              </h3>
             </div>
           </div>
         </div>
         <p class="text-muted mt-3 mb-0">
-          <i class="mdi mdi-alert-octagon mr-1" aria-hidden="true"></i> 65%
-          lower growth
+          <i class="mdi mdi-alert-octagon mr-1" aria-hidden="true"></i
+          >{{ ingresos }} items
         </p>
       </div>
     </div>
@@ -29,16 +31,33 @@
             <i class="fa fa-shipping-fast text-danger icon-lg"></i>
           </div>
           <div class="float-right">
-            <p class="mb-0 text-right">Ingresos</p>
+            <p class="mb-0 text-right">Egresos</p>
             <div class="fluid-container">
-              <h3 class="font-weight-medium text-right mb-0">$65,650</h3>
+              <h3 class="font-weight-medium text-right mb-0">
+                {{ totalEgresos | currency: "EUR" }}
+              </h3>
             </div>
           </div>
         </div>
         <p class="text-muted mt-3 mb-0">
-          <i class="mdi mdi-alert-octagon mr-1" aria-hidden="true"></i> 65%
-          lower growth
+          <i class="mdi mdi-alert-octagon mr-1" aria-hidden="true"></i>
+          {{ egresos }} items
         </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-12 mt-5">
+    <div class="card card-statistics p-5">
+      <h3 class="text-center">Gráfica</h3>
+      <div style="display: block">
+        <canvas
+          baseChart
+          [data]="doughnutChartData"
+          [labels]="doughnutChartLabels"
+          [chartType]="doughnutChartType"
+        >
+        </canvas>
       </div>
     </div>
   </div>
