--- a/src/app/ingreso-egreso/ingreso-egreso.component.html
+++ b/src/app/ingreso-egreso/ingreso-egreso.component.html
@@ -5,10 +5,11 @@
         <h4 class="card-title">Agregar Ingreso / Egreso</h4>
         <p class="card-description">Especifique el monto y el tipo</p>
 
-        <form>
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label>Descripción</label>
             <input
+              formControlName="descripcion"
               type="text"
               class="form-control"
               placeholder="Descripción"
@@ -19,6 +20,7 @@
           <div class="form-group">
             <label>Monto</label>
             <input
+              formControlName="monto"
               type="number"
               class="form-control"
               placeholder="Monto"
@@ -30,15 +32,32 @@
           <div class="form-group">
             <label>Tipo</label>
             <br />
-            <button type="button" class="btn btn-primary btn-block">
+            <button
+              *ngIf="tipo === 'ingreso'"
+              (click)="tipo = 'egreso'"
+              type="button"
+              class="btn btn-primary btn-block"
+            >
               Ingreso
             </button>
-            <!-- <button type="button" class="btn btn-warning btn-block">Egreso</button> -->
+            <button
+              *ngIf="tipo === 'egreso'"
+              type="button"
+              (click)="tipo = 'ingreso'"
+              class="btn btn-warning btn-block"
+            >
+              Egreso
+            </button>
           </div>
 
           <hr />
-          <button type="button" class="btn btn-success mr-2">
-            <i class="fa fa-save"></i>
+          <button
+            type="submit"
+            class="btn btn-success mr-2"
+            [disabled]="form.invalid"
+          >
+            <i *ngIf="isLoading | async" class="fa fa-spin fa-sync"></i>
+            <i *ngIf="!(isLoading | async)" class="fa fa-save"></i>
             Agregar
           </button>
 
